@@ -3,6 +3,7 @@ YYYY-MM-DD
 
 - Bug fixes / improvements
  - Fix build on HP-UX 11.23 (#664)
+ - Throw a ParseException on missing chars from HEXWKB string (#675)
 
 Changes in 3.4.2
 2013-08-25
